hphp/test/quick/toporder.hhas.expectf
Fatal error: Assembler Error: line 11: All top level functions must be defined after any non-top functions in %s on line -1
